# python-workspace

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  demo.py  index.html  mkdocs.yml  pyproject.toml  test.csv
.github/: pull_request_template.md
.github/workflows/: cd.yaml  ci.yaml  codeql.yaml  doc-deploy.yaml  security.yaml  signoff.yaml  test.yaml  versioner.yaml
.streamlit/: config.toml
changelog/: index.html
docs/: changelog.md  index.md  stylesheet.css
docs/signoffs/: re_127.txt
notebooks/: test.ipynb
python_workspace/: demo.py  main.py
search/: search_index.json
src/authentication_service/: exceptions.py  login.py  streamlit_authenticator.py
src/authentication_service/db/: firestore.py  firestore_config.py  queries.py
src/data/: db.py
src/models/: user.py
src/pages/: uber_dashboard.py
src/services/: model.py
src/utils/: formatter.py
test/: index.html
tests/: package_test.py
